# type-combinators

./: LICENSE  Search-old.hs  type-combinators.cabal
src/: Search.hs  Test.hs
src/Data/Type/: Boolean.hs  Combinator.hs  Conjunction.hs  Cyclic.hs  Difference.hs  Disjunction.hs  Eff.hs  Fin.hs  Graph.hs  Index.hs  Length.hs  MQueue.hs  Nat.hs  Option.hs  Product.hs  Quantifier.hs  Remove.hs  Subset.hs  Sum.hs  Sym.hs  Vector.hs
src/Data/Type/Eff/: NonDet.hs  Reader.hs  Writer.hs
src/Data/Type/Fin/: Indexed.hs
src/Data/Type/Index/: Quote.hs  Trans.hs
src/Data/Type/Nat/: Inequality.hs  Quote.hs
src/Data/Type/Product/: .Assoc.hs.swp  Assoc.hs  Dual.hs  Env.hs  Lifted.hs  Order2.hs  Set.hs
src/Data/Type/Sum/: Dual.hs  Lifted.hs  Order2.hs
src/Data/Type/Sym/: Quote.hs
src/Type/Class/: Categories.hs  HFunctor.hs  Higher.hs  Known.hs  Witness.hs
src/Type/Family/: Bool.hs  Constraint.hs  Either.hs  List.hs  Maybe.hs  Monoid.hs  Nat.hs  Pair.hs  Symbol.hs  Tuple.hs
