name: type-combinators
version: 0.2.4.0
category: Data
synopsis: A collection of data types for type-level programming
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kylcarte@gmail.com
copyright: (c) 2015 Kyle Carter, all rights reserved
author: Kyle Carter
homepage: https://github.com/kylcarte/type-combinators

Source-Repository head
    type: git
    location: git://github.com/kylcarte/type-combinators.git

library
    exposed-modules:
        -- Data.Type.Polynomial
        Data.Type.Boolean
        Data.Type.Combinator
        Data.Type.Conjunction
        Data.Type.Difference
        Data.Type.Disjunction
        Data.Type.Fin
        Data.Type.Fin.Indexed
        Data.Type.Index
        Data.Type.Index.Trans
        Data.Type.Length
        Data.Type.Nat
        Data.Type.Nat.Inequality
        Data.Type.Option
        Data.Type.Product
        Data.Type.Product.Env
        Data.Type.Product.Lifted
        Data.Type.Remove
        Data.Type.Subset
        Data.Type.Sum
        Data.Type.Sum.Lifted
        -- Data.Type.Sym
        -- Data.Type.Quantifier
        Data.Type.Vector
        Type.Class.Higher
        Type.Class.Known
        Type.Class.Witness
        Type.Family.Bool
        Type.Family.Constraint
        Type.Family.Either
        Type.Family.List
        Type.Family.Maybe
        Type.Family.Monoid
        Type.Family.Nat
        -- Type.Family.Symbol
        Type.Family.Tuple
    default-extensions:
        UndecidableSuperClasses
        TypeFamilyDependencies
    build-depends:
        base >=4.9 && <5.0
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -fno-warn-unticked-promoted-constructors

